--- a/likelion/record/templates/record/introduce.html
+++ b/likelion/record/templates/record/introduce.html
@@ -5,8 +5,8 @@
     {% load static %}
     {% load staticfiles %}
     <div class="post" style="color:white">
-    <br><br><br><br><br><br>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <br><br><br><br><br><br>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -14,11 +14,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-              <img src="{% static 'like42.png' %}" class="d-block w-100" alt="" height="500px" data-toggle="modal" data-target="#exampleModal">  </a>
+            <img src="{% static 'like42.png' %}" class="d-block w-100" alt="" height="500px" data-toggle="modal"
+              data-target="#exampleModal"> </a>
           </div>
           <div class="carousel-item">
-              <img src="{% static 'like2.jpg' %}" class="d-block w-100" alt="" height="500px" data-toggle="modal" data-target="#exampleModal2"></a>
-            </div>
+            <img src="{% static 'like2.jpg' %}" class="d-block w-100" alt="" height="500px" data-toggle="modal"
+              data-target="#exampleModal2"></a>
+          </div>
           <!-- <div class="carousel-item">
             <a href="이미지" onclick="window.open(this.href, '_blank', 'width=500px, height=500px, toolbars=no,scrollbars=no');return false;"><img src="..." class="d-block w-100" alt="" height="500px"></a>
           </div> -->
@@ -33,10 +35,13 @@
         </a>
       </div>
       <br><br><br>
-      <center><p style="font-size : 20px;">이미지를 클릭하세요!</p></center>
+      <center>
+        <p style="font-size : 20px;">이미지를 클릭하세요!</p>
+      </center>
       <br>
       <div style="color : black;">
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+          aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -53,10 +58,11 @@
               </div>
             </div>
           </div>
-      
+
         </div>
-      
-      <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+        <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+          aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -75,7 +81,7 @@
           </div>
         </div>
 
-    </div>
+      </div>
     </div>
   </div>
 </div>
