--- a/likelion/schedule/templates/schedule_all.html
+++ b/likelion/schedule/templates/schedule_all.html
@@ -1,6 +1,7 @@
 {% extends 'record/base.html' %}
 
 {% block content %}
+<div class="post">
 <div class="mini_background">
     <div class="container">
         <div class="col-md-6">
@@ -42,6 +43,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
