--- a/likelion/schedule/templates/schedule_this.html
+++ b/likelion/schedule/templates/schedule_this.html
@@ -19,7 +19,7 @@
     <h3 class="logo"><a href="{% url 'main' %}"><img class="logo_img" src="{% static 'logo6.png' %}"></a> 충북대학교 x
         멋쟁이사자처럼</h3>
     <img class="lion_icon" src="{% static 'lion_icon.png' %}">
-    <h4 class="me">me</h4>
+    <h4 class="me">{{user.username}}</h4>
 
 </haed>
 
