--- a/likelion/record/templates/record/main.html
+++ b/likelion/record/templates/record/main.html
@@ -1,4 +1,6 @@
 {% extends 'record/base.html' %}
+{% load static %}
+{% load staticfiles %}
 
 {% block content %}
 <div class="mini_background" style="overflow :auto;">
@@ -42,14 +44,9 @@
                 </table>
                 <br>
                 <br>
-                <h3>
-                    MORE<br><br>
-                </h3>
-                <h4>
-                    face book --- <a href="https://www.facebook.com/LikeLionatCBNU/?ref=br_rs" target="_blank"> GO </a>
-                </h4>
+                
             </div>
-
+                
             <div class="col-md-6">
                 <h3>SCHEDULE</h3>
                 <table class="table"  style="color:white">
@@ -74,6 +71,18 @@
 
                 </table>
             </div>
+        
+
+           
+                <div style="position:absolute; margin-top : 500px; margin-left : 450px;"> 
+              
+                    
+                   <a href="https://www.facebook.com/LikeLionatCBNU/?ref=br_rs" target="_blank"><img src="{% static 'face.png' %}" style="width:60px; height:60px; margin-right : 5px;"> </a>
+                   <a href="https://class.likelion.org/" target="_blank"><img src="{% static 'like.png' %}" style="width:60px; height:60px; margin-right : 5px;"> </a>
+                   <a href="https://www.chungbuk.ac.kr/" target="_blank"><img src="{% static 'cbnu.png' %}" style="width:60px; height:60px;"> </a>
+                   
+              
+                </div>
 
         </div>
     </div>
