--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -84,6 +84,7 @@
             <nav class="calendar_menu">
 
                 <ul>
+                    <li><a href="{% url 'main' %}">Main</a></li>
 
                     <li><a href="{% url 'introduce' %}">Introduce</a></li>
 
