--- a/likelion/schedule/templates/schedule_this.html
+++ b/likelion/schedule/templates/schedule_this.html
@@ -44,6 +44,8 @@
     <nav class="calendar_menu">
 
         <ul>
+        
+            <li><a href="{% url 'main' %}">Main</a></li>
 
             <li><a href="{% url 'introduce' %}">introduce</a></li>
 
