--- a/likelion/record/templates/record/post_new.html
+++ b/likelion/record/templates/record/post_new.html
@@ -1,15 +1,15 @@
 {% extends 'record/base.html' %}
 {% block content %}
-<div class="mini_background">
+<div class="mini_background" >
     <div class="container">
         <div class="post">
             <h1 style="color:white">NEW</h1>
-            <form action="" method="post" enctype="multipart/form-data" novalidate>
+            <form action="" method="post" enctype="multipart/form-data" novalidate style="color:black">
                 {% csrf_token %}
                 <table>
                     {{ form }}
                 </table>
-                <input type="submit" value="SAVE" style="color:white">
+                <input class="btn btn-info"type="submit" value="SAVE" style="color:white">
 
             </form>
         </div>
