--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -142,7 +142,9 @@
     <footer>
         <br>
         <br>
-        MAKE
+        made by 최세화 / 신은지 / 박태미<br>in 멋쟁이 사자처럼 at 충북대학교 <br>
+        <small>first start 2019/02/24</small>
+
         <br>
         <br>
     </footer>
