--- a/likelion/record/templates/record/member.html
+++ b/likelion/record/templates/record/member.html
@@ -17,7 +17,7 @@
                       <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
                         <h2>신은지</h2>
-                        <p>소프트웨어학과 18학번<br>angel9803@naver.com</p>
+                        <p>소프트웨어학과 18학번<br>simsimhae_98@naver.com</p>
                       </div><!-- /.col-lg-4 -->
                       <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
